--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react_ssr",
+  "name": "ad_manager",
   "version": "1.0.0",
   "description": "",
   "private": true,
@@ -14,7 +14,7 @@
     "build:server": "tsc -p ./server && tsc-alias -p ./server/tsconfig.json",
     "build": "npm run build:ui && npm run build:server",
     "server": "node server/dist/server/index.js --port 3000",
-    "server:dev": "npm run build:ui:dev && nodemon --watch 'src/**/*' -e ts,tsx --exec 'npm run build:ui:dev && npm run start:server:dev'",
+    "server:dev": "npm run build:ui:dev && nodemon --watch '**/*' -e ts,tsx --exec 'npm run build:ui:dev && npm run start:server:dev'",
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
     "test:cypress": "concurrently -k 'npm run server' 'npm run cypress:run'",
@@ -33,9 +33,13 @@
     "@storybook/addon-viewport": "^6.4.9",
     "@storybook/react": "^6.4.9",
     "@types/core-js": "^2.5.5",
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.4",
     "@types/jquery": "^3.5.9",
     "@types/mocha": "^9.0.0",
+    "@types/passport": "^1.0.7",
+    "@types/passport-google-oauth": "^1.0.42",
     "@types/raf": "^3.4.0",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
@@ -54,7 +58,7 @@
     "jquery": "^3.6.0",
     "mini-css-extract-plugin": "^2.4.5",
     "nodemon": "^2.0.15",
-    "prettier": "^2.5.0",
+    "prettier": "^2.6.0",
     "sass": "^1.45.0",
     "sass-loader": "^10",
     "storybook": "^6.4.4",
@@ -70,10 +74,16 @@
   },
   "dependencies": {
     "core-js": "^3.19.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
+    "node-fetch": "^2.6.7",
+    "passport": "^0.5.2",
+    "passport-google-oauth": "^2.0.0",
     "raf": "^3.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.2",
     "styled-components": "^5.3.3",
     "whatwg-fetch": "^3.6.2"
   }
