--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "webpack-dev-server": "^4.6.0"
   },
   "dependencies": {
+    "body-parser": "^1.19.2",
     "core-js": "^3.19.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
